--- a/wave.css
+++ b/wave.css
@@ -1,8 +1,3 @@
-.fx {
-  --dew-shift: filter 33ms;
-  --dew-hover: hue-rotate(30deg);
-}
-
 :any-link {
   color: inherit;
   background: none;
@@ -19,8 +14,36 @@
   outline: thick groove;
 }
 
+[class] {
+  box-sizing: border-box;
+}
+
+.dill {
+  min-height: 100vh;
+  margin: auto;
+}
+
+@media (prefers-color-scheme: dark) {
+  .local {
+    --tape-white: thistle;
+    --tape-hex: slateblue;
+    --tape-pink: salmon;
+    --tape-blue: deepskyblue;
+  }
+}
+
+@media all,(prefers-color-scheme: light) {
+  .local {
+    --tape-hex: violet;
+    --tape-pink: sandybrown;
+    --tape-white: silver;
+    --tape-pink: salmon;
+  }
+}
+
 .wave {
-  --tape-blue: deepskyblue;
+  flex-basis: 100%;
+  padding: 1ex;
 }
 
 .surf {
@@ -28,28 +51,35 @@
   margin-block-end: 1em;
 }
 
-.pad {
-  box-sizing: border-box;
-  padding: 1ex;
-}
-
 html {
   font-family: sans-serif;
-  font-size: max(1em + 1vw + 1vh);
+  font-size: max(3ex, 3vw + 3vh);
 }
 
 body {
-  box-sizing: border-box;
+  margin: auto;
+  overflow-wrap: anywhere;
+}
+
+.doll {
   display: flex;
   flex-flow: column;
-  justify-content: center;
-  align-items: center;
-  margin: 1ex 0;
-  margin-block: 1ex;
-  margin-inline: 0;
-  overflow-wrap: anywhere;
   padding: 1em;
-  min-height: calc(100vh - 2ex);
+  align-items: center;
+  justify-items: center;
+  justify-content: center;
+}
+
+@media (orientation: landscape) {
+  .roll {
+    writing-mode: sideways-lr;
+  }
+}
+
+@media (orientation: portrait) {
+  .rill {
+    writing-mode: sideways-lr;
+  }
 }
 
 @media (prefers-reduced-motion) {
